--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 lock_demo
 lock_tester
 lock_server
+extent_server
+yfs_client
 rpc/rpctest
 
 cscope.files
@@ -13,3 +15,7 @@ cscope.out
 
 yfs1
 yfs2
+objects/
+.\#*
+\#*
+ID/
